style.css
body {
    height: 100vh;
    margin: 0;
    font-family: Roboto, 'Open Sans', sans-serif;
}

.header {
    display: flex;
    justify-content: space-around;
    align-items: center;
    font-size: 24px;
    font-weight: 500;
    color: #F9FAF8;
    background-color: #1F2937;
}

ul {
    display: flex;
    gap: 20px;
    font-size: 18px;
    color: #E5E7EB;
    list-style: none;
}

.hero-section {
    display: flex;
    justify-content: center;
    gap: 60px;
    align-items: center;
    padding: 35px;
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 900;
    background-color: #1F2937;
}

.hero-card {
    width: 450px;
}

.hero-card p {
    font-size: 18px;
    font-weight: normal;
    color: #E5E7EB;
}

.hero-card button {
    background-color: #3882F6;
    font-size: 18px;
    color: white;
    width: 150px;
    height: 40px;
    font-weight: 600;
    border-radius: 10px;
    border-style: none;
}

.info-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 40px;
    padding: 80px;
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
}

.info-section .cards {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    gap: 60px;
}

.info-section .card {
    width: 200px;
    color: #808080;
    font-size: 18px;
    font-weight: normal;
    text-align: center;
}

.info-section .cards img {
    width: 200px;
    height: 200px;
    object-fit: cover;
    border-style: solid;
    border-width: 4px;
    border-color: #3882F6;
    border-radius: 15px;
}

.info-section .special {
    flex: 1;
    display: flex;
    align-items: center;
    gap: 20px;
    border-style: solid;
    border-width: 6px;
    border-color: #626262;
    border-radius: 15px;
}

